Update install instructions to point to the repo instructions.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to Loomio.org</h3>
+
+<h3>Welcome to Loomio.org</h3>
 
 <p><a href="http://loom.io">Loomio</a> is a free open source web app that helps groups facilitate discussions and make decisions together. This page is dedicated to providing general information about the project and instructions for contributing. If you're looking for current updates about the project, head over to the blog at <a href="http://blog.loom.io">http://blog.loom.io</a>.</p>
 
@@ -41,25 +42,22 @@
 
 <h3>Get started contributing (web developers)</h3>
 
-<p>Loomio is a Ruby on Rails application. If you're new to Ruby on Rails, you can have a read through our <a href="https://docs.google.com/document/d/1RmNrYHXuxiANa0h1MIBt_4d-X41w-fOw7Ohf3hwEhcA/edit">Loomio Getting Started</a> document and it should help you get set up. If you're already familiar with Rails then the setup should be pretty simple. Just run the following commands and you should be good to go.</p>
+<p>Loomio is a Ruby on Rails application. If you're new to Ruby on
+Rails, you can have a read through our <a
+  href="https://docs.google.com/document/d/1RmNrYHXuxiANa0h1MIBt_4d-X41w-fOw7Ohf3hwEhcA/edit">Loomio
+  Getting Started</a> document and it should help you get set up.</p>
 
-<pre><code>$ git clone git@github.com:enspiral/loomio.git
-$ cd loomio
-$ bundle install
-$ cp config/database.example.yml config/database.yml
-$ bundle exec rake db:setup; bundle exec rake db:setup RAILS_ENV=test;
-$ bundle exec rake db:seed; bundle exec rake db:seed RAILS_ENV=test;
-</code></pre>
+<p>To install Loomio on your computer, follow the installation instructions on our <a href="https://github.com/enspiral/loomio">GitHub page</a>.</p>
 
 <p>We keep track of project management using the <a href="https://trello.com/board/loomio-development/4eb8a2ef43e06d000072b5fd">Loomio Trello Board</a>. Feel free to have a look at the board while you're checking out the code to see if there might be any tasks that you'd feel comfortable taking on.</p>
 
-<h3>Authors and Contributors</h3>
+<p>Once you feel like you want to start contributing just send us an
+email at contact@loom.io.</p>
 
-<p>Jon Lemmon (<a href="https://github.com/jonlemmon">@jonlemmon</a>) is currently maintaining the project code. If you have any Loomio code-related questions, feel free to ping him on Github.</p>
+<h3>Contact</h3>
 
-<h3>Support or Contact</h3>
+<p>Email us: contact@loom.io</p>
 
-<p>Any other questions you can send over to contact@loom.io.</p>
       </section>
     </div>
 
