--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h3>Welcome to Loomio.org</h3>
 
-<p><a href="http://loom.io">Loomio</a> is a free and open-source web application that helps groups make better decisions together. This page is dedicated to providing general information about the project and instructions for contributing. If you're looking for current updates about the project, head over to the blog at <a href="http://blog.loom.io">http://blog.loom.io</a>.</p>
+<p><a href="http://loom.io">Loomio</a> is an open-source web application that helps groups make better decisions together. This page is dedicated to providing general information about the project and instructions for contributing. If you're looking for current updates about the project, head over to the blog at <a href="http://blog.loom.io">http://blog.loom.io</a>.</p>
 
 <h3>Contribute</h3>
 
